<resources>
    <string name="app_name">Android Study Guide</string>

    <!-- MAIN SCREEN-->
    <string name="main_screen_android_core">Android Core</string>

    <!-- ANDROID CORE SCREEN-->
    <string name="android_core_screen_toast">Toasts</string>
    <string name="android_core_screen_snackbar">Snackbars</string>
    <string name="android_core_screen_localization">Localization</string>
    <string name="android_core_screen_notifications">Notifications</string>
    <string name="android_core_screen_jetpack">Jetpack</string>

    <!-- ANDROID CORE: TOAST SCREEN-->
    <string name="android_core_screen_toast_simple">Simple toast</string>
    <string name="android_core_screen_toast_positioned">Positioned toast</string>
    <string name="android_core_screen_toast_custom">Custom toast</string>

    <!-- ANDROID CORE: SNACKBAR SCREEN-->
    <string name="android_core_screen_snackbar_simple">Simple snackbar</string>
    <string name="android_core_screen_snackbar_simple_with_action">Simple snackbar with action</string>
    <string name="android_core_screen_snackbar_simple_with_action_done">DONE</string>

    <!-- ANDROID CORE: LOCALIZATION SCREEN-->
    <string name="android_core_screen_localization_literal">Localization text:</string>
    <string name="android_core_screen_localization_info">Try to change device language to see changes. English and
        Spanish are availables.
    </string>
    <string name="android_core_screen_localization_value_example">en</string>

    <!-- ANDROID CORE: NOTIFICATION SCREEN-->
    <string name="android_core_screen_notification_simple">Simple notification</string>
    <string name="android_core_screen_notification_simple_text">Simple notification text</string>
    <string name="android_core_screen_notification_simple_text_content">Simple notification text content</string>
    <string name="android_core_screen_notification_loading">Loading notification</string>
    <string name="android_core_screen_notification_loading_text">Loading notification text</string>
    <string name="android_core_screen_notification_loading_content">Loading notification text content</string>

    <!-- ANDROID CORE: JETPACK SCREEN-->
    <string name="android_core_screen_jetpack_work_manager">WorkManager</string>
    <string name="android_core_screen_jetpack_work_manager_info">The task starts and updates the text after 5 seconds.
    </string>
    <string name="android_core_screen_jetpack_work_manager_task_1">Start task</string>
    <string name="android_core_screen_jetpack_work_manager_task_todo">Todo</string>
    <string name="android_core_screen_jetpack_work_manager_task_doing">Doing</string>
    <string name="android_core_screen_jetpack_work_manager_task_done">Done</string>

    <!-- ANDROID CORE: JETPACK SCREEN-->
    <string name="android_core_screen_jetpack_room">ROOM</string>
    <string name="android_core_screen_jetpack_room_info">Add users with the form bellow and try to close the app and
        return to this window to see persistence data management.
    </string>
    <string name="android_core_screen_jetpack_room_add_user">Add user</string>
    <string name="android_core_screen_jetpack_room_name_place_holder">Name</string>
    <string name="android_core_screen_jetpack_room_subname_place_holder">Subname</string>
    <string name="android_core_screen_jetpack_room_age_place_holder">Age</string>
    <string name="android_core_screen_jetpack_room_error_empty_fields">Fill all the fields</string>

    <!-- ANDROID CORE: NAVIGATION SCREEN-->
    <string name="android_core_screen_jetpack_navigation">Navigation</string>
    <string name="android_core_screen_jetpack_navigation_main">Main navigation screen</string>
    <string name="android_core_screen_jetpack_navigation_main_go_to_screen_1">Go to screen 1</string>
    <string name="android_core_screen_jetpack_navigation_screen_1">Screen 1</string>
    <string name="android_core_screen_jetpack_navigation_screen_2">Screen 2</string>
    <string name="android_core_screen_jetpack_navigation_screen_2_reveived_text">Text received</string>
    <string name="android_core_screen_jetpack_navigation_main_go_to_screen_2">Go to screen 2</string>
    <string name="android_core_screen_jetpack_navigation_screen_1_info">Insert a text in the field and navigate to next
        screen. The navigation will use direcctions to send the value as a argument to screen 2.
    </string>
    <string name="android_core_screen_jetpack_navigation_screen_1_info_hint">Insert value</string>

    <!-- ANDROID CORE: VIEWMODEL SCREEN-->
    <string name="android_core_screen_jetpack_viewmodel">Viewmodel</string>
    <string name="android_core_screen_jetpack_viewmodel_info">This screen uses Viewmodel. Try to change the value in
        field and see the changes in text at the top.
    </string>
    <string name="android_core_screen_jetpack_viewmodel_text_change">Initial text</string>
    <string name="android_core_screen_jetpack_viewmodel_button_save">Save value in viewmodel</string>

    <!-- ANDROID CORE: JOB SCHEDULER SCREEN-->
    <string name="android_core_screen_jetpack_job_scheduler">Job Scheduler</string>
    <string name="android_core_screen_jetpack_job_scheduler_network">Network Type Required</string>
    <string name="android_core_screen_jetpack_job_scheduler_network_option_none">None</string>
    <string name="android_core_screen_jetpack_job_scheduler_network_option_any">Any</string>
    <string name="android_core_screen_jetpack_job_scheduler_network_option_wifi">Wifi</string>
    <string name="android_core_screen_jetpack_job_scheduler_requires">Requires</string>
    <string name="android_core_screen_jetpack_job_scheduler_requires_device_idle">Device Idle</string>
    <string name="android_core_screen_jetpack_job_scheduler_requires_device_charging">Device charging</string>
    <string name="android_core_screen_jetpack_job_scheduler_override_deadline">Override deadline</string>
    <string name="android_core_screen_jetpack_job_scheduler_schedule_job">Schedule job</string>
    <string name="android_core_screen_jetpack_job_scheduler_cancel_job">Cancel job</string>
    <string name="android_core_screen_jetpack_job_scheduler_success">The job was executed correctly.</string>

</resources>
