<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AndroidCoreScreenActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/main_screen_android_core"
            android:gravity="center"
            style="@style/HeaderTextStyle" android:id="@+id/textView"/>

    <Button
            android:id="@+id/button_toast"
            android:text="@string/android_core_screen_toast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
            android:id="@+id/button_snackbar"
            android:text="@string/android_core_screen_snackbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_toast"/>

    <Button
        android:id="@+id/button_localization"
        android:text="@string/android_core_screen_localization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/button_snackbar"/>

    <Button
            android:id="@+id/button_notifications"
            android:text="@string/android_core_screen_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_localization"/>

    <Button
            android:id="@+id/button_jetpack"
            android:text="@string/android_core_screen_jetpack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_notifications"/>

</android.support.constraint.ConstraintLayout>