<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AndroidCoreToastsScreenActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/android_core_screen_toast"
            android:gravity="center"
            style="@style/HeaderTextStyle"
            android:id="@+id/textView"/>

    <Button
            android:id="@+id/button_toast_simple"
            android:text="@string/android_core_screen_toast_simple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
            android:id="@+id/button_toast_positioned"
            android:text="@string/android_core_screen_toast_positioned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_toast_simple"/>

    <Button
            android:id="@+id/button_toast_custom"
            android:text="@string/android_core_screen_toast_custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_toast_positioned"/>

</android.support.constraint.ConstraintLayout>