<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".androidCore.jetpack.jobScheduler.AndroidCoreJobSchedulerActivity">

    <TextView
            android:id="@+id/text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/android_core_screen_jetpack_job_scheduler"
            android:gravity="center"
            style="@style/HeaderTextStyle"/>

    <TextView
            android:id="@+id/text_view_network"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"
            android:text="@string/android_core_screen_jetpack_job_scheduler_network"
            android:gravity="center"
            style="@style/SimpleTextStyle"
            android:layout_marginTop="8dp"/>
    <RadioGroup
            android:id="@+id/radio_group_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_network"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

        <RadioButton
                android:id="@+id/radio_button_netwotk_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="true"
                android:text="@string/android_core_screen_jetpack_job_scheduler_network_option_none"/>
        <RadioButton
                android:id="@+id/radio_button_netwotk_any"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="false"
                android:text="@string/android_core_screen_jetpack_job_scheduler_network_option_any"/>
        <RadioButton
                android:id="@+id/radio_button_netwotk_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="false"
                android:text="@string/android_core_screen_jetpack_job_scheduler_network_option_wifi"/>

    </RadioGroup>

    <TextView
            android:id="@+id/text_view_requires"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/android_core_screen_jetpack_job_scheduler_requires"
            android:gravity="center"
            style="@style/SimpleTextStyle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_network"/>

    <TextView
            android:id="@+id/text_view_device_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/android_core_screen_jetpack_job_scheduler_requires_device_idle"
            android:gravity="center"
            style="@style/SimpleTextStyle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_requires" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/text_view_device_charging"/>

    <Switch
            android:id="@+id/switch_device_idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_view_device_idle"
            app:layout_constraintStart_toStartOf="@+id/text_view_device_idle"
            app:layout_constraintEnd_toEndOf="@+id/text_view_device_idle"/>

    <TextView
            android:id="@+id/text_view_device_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_core_screen_jetpack_job_scheduler_requires_device_charging"
            android:gravity="center"
            style="@style/SimpleTextStyle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_requires"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_view_device_idle" app:layout_constraintHorizontal_bias="0.5"/>

    <Switch
            android:id="@+id/switch_device_charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_view_device_charging"
            app:layout_constraintStart_toStartOf="@+id/text_view_device_charging"
            app:layout_constraintEnd_toEndOf="@+id/text_view_device_charging"/>


    <TextView
            android:id="@+id/text_view_override_deadline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/android_core_screen_jetpack_job_scheduler_override_deadline"
            android:gravity="center"
            style="@style/SimpleTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/switch_device_idle"
    />
    <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="3"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_override_deadline"/>

</androidx.constraintlayout.widget.ConstraintLayout>