<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".androidCore.AndroidCoreNotificationsScreenActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/android_core_screen_notifications"
            android:gravity="center"
            style="@style/HeaderTextStyle"
            android:id="@+id/textView"/>

    <Button
            android:id="@+id/button_simple_notification"
            android:text="@string/android_core_screen_notification_simple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <Button
            android:id="@+id/button_loading_notification"
            android:text="@string/android_core_screen_notification_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_simple_notification"/>

</androidx.constraintlayout.widget.ConstraintLayout>