<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".androidCore.jetpack.viewmodel.AndroidCoreJetpackViewmodelActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/android_core_screen_jetpack_viewmodel"
            android:gravity="center"
            style="@style/HeaderTextStyle"/>

    <TextView
            android:id="@+id/text_view_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/android_core_screen_jetpack_viewmodel_info"
            android:gravity="center"
            style="@style/SimpleTextStyle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <TextView
            android:id="@+id/text_view_change_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/android_core_screen_jetpack_viewmodel_text_change"
            android:gravity="center"
            style="@style/HeaderTextStyle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_info"/>

    <EditText
            android:id="@+id/edit_text_change_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_change_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/android_core_screen_jetpack_viewmodel_text_change"/>

    <Button
            android:id="@+id/button_save"
            android:text="@string/android_core_screen_jetpack_viewmodel_button_save"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/ButtonStyle"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_change_text"
            android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>