<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".androidCore.jetpack.AndroidCoreJetpackRoom">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/android_core_screen_jetpack_room"
            android:gravity="center"
            style="@style/HeaderTextStyle"
            android:id="@+id/textView"/>

    <TextView
            android:id="@+id/text_view_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:text="@string/android_core_screen_jetpack_room_info"
            android:gravity="center"
            style="@style/SimpleTextStyle"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/android_core_screen_jetpack_room_name_place_holder"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_info"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/textInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/android_core_screen_jetpack_room_subname_place_holder"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout2"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.5">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/android_core_screen_jetpack_room_age_place_holder"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginStart="8dp"
            android:id="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/button_add_user"
            android:text="@string/android_core_screen_jetpack_room_add_user"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_users"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"/>

</androidx.constraintlayout.widget.ConstraintLayout>